# flowcsp

./: .gitignore  CLAUDE.md  evaluation.ipynb  evaluation_report.txt  evaluation_results.csv  inference.ipynb  inference.py  inference_utils.py  postprocess.py  prepare_and_train.sh  pyproject.toml  submission.csv  submission.ipynb  train.py  train_hydra.py
conf/: config.yaml
conf/data/: small_dataset.yaml  train_cache.yaml
conf/flows/: cfm_cfg.yaml  meanflow.yaml
conf/networks/: crystal_transformer.yaml  crystal_transformer_v2.yaml  diffcsp.yaml  equiformer.yaml
scripts/: calculate_lattice_stats.py  merge_cdvae_data.py  merge_csv.py  preprocess.py  sample_merge_csv.py  visualize_loss.ipynb  warmup_cache.py
src/: __init__.py  data.py  ema_callback.py  gnn_data.py  metrics.py  normalizer.py  pxrd_simulator.py  trainer.py
src/flows/: __init__.py  cfm.py  cfm_cfg.py
src/networks/: __init__.py  crystal_transformer.py  crystal_transformer_v2.py  diffcsp.py  equiformer.py  transformer.py
src/networks/equiformer_refs/: dp_attention_transformer.py  dp_attention_transformer_md17.py  dp_attention_transformer_oc20.py  equiformer_md17_dens.py  graph_attention_transformer.py  graph_attention_transformer_md17.py  graph_attention_transformer_oc20.py
