[project]
name = "mincycle4csp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "torch_geometric",
    "pyg_lib",
    "torch_scatter",
    "torch_sparse",
    "torch_cluster",
    "torch_spline_conv",
    "pytorch-lightning>=2.5.3",
    "python-dotenv>=1.1.1",
    "numpy>=2.3.2",
    "wandb>=0.21.1",
    "hydra-core>=1.3.2",
    "pymatgen>=2025.6.14",
    "e3nn>=0.5.6",
    "ipykernel>=6.30.1",
    "seaborn>=0.13.2",
    "einops>=0.8.1",
    "tensorboard>=2.20.0",
    "rich>=14.1.0",
    "lmdb>=1.7.3",
    "torchcfm>=1.0.7",
    "msgpack>=1.1.1",
    "msgpack-numpy>=0.4.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128"}
]
pyg_lib = [
    { index = "geometry-cu128"}
]
torch_scatter = [
    { index = "geometry-cu128"},
]
torch_sparse = [
    { index = "geometry-cu128"},
]
torch_cluster = [
    { index = "geometry-cu128"},
]
torch_spline_conv = [
    { index = "geometry-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "geometry-cu128"
url = "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
explicit = true
format = "flat"
